# muon

./: .eslintignore  .eslintrc.json  .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml  eslint.config.mjs  forge.config.js  forge.config.ts  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  preload.ts  renderer.js  style.css  tailwind.config.js  titlebar-preload.js  tsconfig.json  webpack.main.js  webpack.renderer.js
.webpack/: main.js  main.js.map
.webpack/renderer/main_window/: index.html  index.js  index.js.map  preload.js  preload.js.map
electron/: main.ts
neo/: package.json
neo/src-tauri/: Cargo.toml  tauri.conf.json
neo/src-tauri/src/: main.rs
notes/: editor.html
renderer/: App.tsx
src/: config.ts  index.html  main.js  main.rs  main.ts  preload.ts  renderer.js  style.css
src/renderer/: App.tsx  appConfig.ts  bootstrap.ts  canvas.js  collision.ts  constants.ts  desktopTransform.ts  gestureNavigation.ts  index.html  keyboardShortcuts.ts  notes.html  notes.ts  notes.tsx  pixelSnap.ts  renderer.ts  renderer.tsx  rendererCore.ts  searchOverlay.ts  settingsOverlay.ts  simpleMarkdown.ts  state.ts  styles.css  viewZoom.ts  windowCreation.ts  windowElement.ts  windowManager.ts
src/renderer/settings/: appConfig.ts  gridStyles.ts  index.html  shortcutInput.ts  window.ts
src/shared/: windowLayout.ts
src/types/: external-modules.d.ts  global.d.ts
